--- a/cabal.project
+++ b/cabal.project
@@ -1,7 +1,7 @@
 -- Bump this if you need newer packages.
 index-state: 2022-02-22T20:47:03Z
 
-packages: plutus-browser-bridge.cabal
+packages: plutus-js-bridge.cabal
 
 -- We never, ever, want this.
 write-ghc-environment-files: never
