--- a/plutus-js-bridge.cabal
+++ b/plutus-js-bridge.cabal
@@ -1,6 +1,6 @@
 Cabal-Version:          3.6
 
-Name:                   plutus-browser-bridge
+Name:                   plutus-js-bridge
 Version:                0.1.0.0
 Author:                 Keyan M.
 Maintainer:             keyanmaskoot@snapbrillia.com
@@ -30,7 +30,7 @@ executable plutus-bridge-app
                       , bytestring
                       , cardano-api
                       , filepath
-                      , plutus-browser-bridge
+                      , plutus-js-bridge
                       , plutus-tx
                       , text
   default-language:     Haskell2010
